--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # TODO: Update with exact module version
-numpy
-torch>=1.7
+# --extra-index-url https://download.pytorch.org/whl/cu111
+
+# torch==1.8.1+cu111
+# torchvision==0.9.1+cu111
+
+numpy<=1.23.5
 opencv_python
 loguru
 tqdm
-torchvision
 thop
 ninja
 tabulate
